[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://images/mix_08.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/smallparticles.png" type="Texture" id=4]
[ext_resource path="res://fonts/MODES___.TTF" type="DynamicFontData" id=5]

[sub_resource type="ColorRamp" id=1]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]

font/size = 20
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 518.051, 578.567 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="explosion1" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 212.742, 185.042 )

[node name="explosion2" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 531.856, 269.252 )

[node name="explosion3" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 845.429, 252.632 )
config/lifetime = 12.0
config/texture = ExtResource( 4 )
color/color_ramp = SubResource( 1 )

[node name="Timer1" type="Timer" parent="."]

process_mode = 1
wait_time = 7.0
one_shot = false
autostart = true

[node name="Timer2" type="Timer" parent="."]

process_mode = 1
wait_time = 11.0
one_shot = false
autostart = true

[node name="Timer3" type="Timer" parent="."]

process_mode = 1
wait_time = 13.0
one_shot = false
autostart = true

[node name="RocketTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 17.0
one_shot = false
autostart = true

[node name="TextTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 893.0
margin/top = 547.0
margin/right = 1003.0
margin/bottom = 578.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = false

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 14.0
margin/top = 19.0
margin/right = 1007.0
margin/bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "Fireworks 2017 London"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="Timer1" to="." method="_onTimer1Fire"]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2Fire"]

[connection signal="timeout" from="Timer3" to="." method="_on_Timer3Fire"]

[connection signal="timeout" from="RocketTimer" to="." method="_on_RocketTimerFire"]

[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimerTick"]

[connection signal="pressed" from="Button" to="." method="_on_CreditsDisplay"]


